Related work fix

--- a/writeup/jfp/tex/references.bib
+++ b/writeup/jfp/tex/references.bib
@@ -3744,3 +3744,100 @@ japanese     =   {http://proofcafe.org/sf}
   biburl       = {https://dblp.org/rec/journals/tcs/Wadler90.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+@Article{LutzeM24,
+  author       = {Matthew Lutze and Magnus Madsen},
+  title        = {Associated Effects: Flexible Abstractions for Effectful
+                  Programming},
+  journal      = {Proc. {ACM} Program. Lang.},
+  year         = 2024,
+  volume       = 8,
+  number       = {{PLDI}},
+  pages        = {394-416},
+  doi          = {10.1145/3656393},
+  url          = {https://doi.org/10.1145/3656393},
+  timestamp    = {Sun, 19 Jan 2025 14:47:46 +0100},
+  biburl       = {https://dblp.org/rec/journals/pacmpl/LutzeM24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@Article{MatacheLMSWY25,
+  author       = {Cristina Matache and Sam Lindley and Sean K. Moss and Sam
+                  Staton and Nicolas Wu and Zhixuan Yang},
+  title        = {Scoped Effects, Scoped Operations, and Parameterized Algebraic
+                  Theories},
+  journal      = {{ACM} Trans. Program. Lang. Syst.},
+  year         = 2025,
+  volume       = 47,
+  number       = 2,
+  pages        = {8:1--8:33},
+  doi          = {10.1145/3731678},
+  url          = {https://doi.org/10.1145/3731678},
+  timestamp    = {Thu, 07 Aug 2025 23:02:34 +0200},
+  biburl       = {https://dblp.org/rec/journals/toplas/MatacheLMSWY25.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@InProceedings{Staton13,
+  author       = {Sam Staton},
+  title        = {An Algebraic Presentation of Predicate Logic - (Extended
+                  Abstract)},
+  year         = 2013,
+  booktitle    = {Foundations of Software Science and Computation Structures -
+                  16th International Conference, {FOSSACS} 2013, Held as Part of
+                  the European Joint Conferences on Theory and Practice of
+                  Software, {ETAPS} 2013, Rome, Italy, March 16-24,
+                  2013. Proceedings},
+  pages        = {401-417},
+  doi          = {10.1007/978-3-642-37075-5\_26},
+  url          = {https://doi.org/10.1007/978-3-642-37075-5\_26},
+  crossref     = {DBLP:conf/fossacs/2013},
+  timestamp    = {Tue, 14 May 2019 10:00:55 +0200},
+  biburl       = {https://dblp.org/rec/conf/fossacs/Staton13.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@proceedings{DBLP:conf/fossacs/2013,
+  editor       = {Frank Pfenning},
+  title        = {Foundations of Software Science and Computation Structures - 16th
+                  International Conference, {FOSSACS} 2013, Held as Part of the European
+                  Joint Conferences on Theory and Practice of Software, {ETAPS} 2013,
+                  Rome, Italy, March 16-24, 2013. Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {7794},
+  publisher    = {Springer},
+  year         = {2013},
+  url          = {https://doi.org/10.1007/978-3-642-37075-5},
+  doi          = {10.1007/978-3-642-37075-5},
+  isbn         = {978-3-642-37074-8},
+  timestamp    = {Fri, 15 Aug 2025 14:04:49 +0200},
+  biburl       = {https://dblp.org/rec/conf/fossacs/2013.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@InProceedings{Staton13instances,
+  author       = {Sam Staton},
+  title        = {Instances of Computational Effects: An Algebraic Perspective},
+  year         = 2013,
+  booktitle    = {28th Annual {ACM/IEEE} Symposium on Logic in Computer Science,
+                  {LICS} 2013, New Orleans, LA, USA, June 25-28, 2013},
+  pages        = 519,
+  doi          = {10.1109/LICS.2013.58},
+  url          = {https://doi.org/10.1109/LICS.2013.58},
+  crossref     = {DBLP:conf/lics/2013},
+  timestamp    = {Fri, 24 Mar 2023 00:01:50 +0100},
+  biburl       = {https://dblp.org/rec/conf/lics/Staton13.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@proceedings{DBLP:conf/lics/2013,
+  title        = {28th Annual {ACM/IEEE} Symposium on Logic in Computer Science, {LICS}
+                  2013, New Orleans, LA, USA, June 25-28, 2013},
+  publisher    = {{IEEE} Computer Society},
+  year         = {2013},
+  url          = {https://ieeexplore.ieee.org/xpl/conhome/6570844/proceeding},
+  isbn         = {978-1-4799-0413-6},
+  timestamp    = {Fri, 15 Aug 2025 14:09:27 +0200},
+  biburl       = {https://dblp.org/rec/conf/lics/2013.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
