Refine paragraphs about final tagless

--- a/writeup/jfp/tex/references.bib
+++ b/writeup/jfp/tex/references.bib
@@ -3841,3 +3841,33 @@ japanese     =   {http://proofcafe.org/sf}
   biburl       = {https://dblp.org/rec/conf/lics/2013.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+@InProceedings{WinantD18,
+  author       = {Thomas Winant and Dominique Devriese},
+  title        = {Coherent explicit dictionary application for Haskell},
+  year         = 2018,
+  booktitle    = {Proceedings of the 11th {ACM} {SIGPLAN} International
+                  Symposium on Haskell, Haskell@ICFP 2018, St. Louis, MO, USA,
+                  September 27-17, 2018},
+  pages        = {81-93},
+  doi          = {10.1145/3242744.3242752},
+  url          = {https://doi.org/10.1145/3242744.3242752},
+  crossref     = {DBLP:conf/haskell/2018},
+  timestamp    = {Sun, 19 Jan 2025 13:16:26 +0100},
+  biburl       = {https://dblp.org/rec/conf/haskell/WinantD18.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@proceedings{DBLP:conf/haskell/2018,
+  editor       = {Nicolas Wu},
+  title        = {Proceedings of the 11th {ACM} {SIGPLAN} International Symposium on
+                  Haskell, Haskell@ICFP 2018, St. Louis, MO, USA, September 27-17, 2018},
+  publisher    = {{ACM}},
+  year         = {2018},
+  url          = {https://doi.org/10.1145/3242744},
+  doi          = {10.1145/3242744},
+  isbn         = {978-1-4503-5835-4},
+  timestamp    = {Sun, 17 Aug 2025 20:31:42 +0200},
+  biburl       = {https://dblp.org/rec/conf/haskell/2018.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
