--- a/writeup/jfp/tex/document.tex
+++ b/writeup/jfp/tex/document.tex
@@ -152,7 +152,7 @@
   for programming with effects. A key benefit is modularity: programs
   with effects are defined against an interface operations, allowing
   the implementation of effects to be defined and refined without
-  changing or recompiling programs. Behavior of effects is specified
+  changing or recompiling programs. The behavior of effects is specified
   using equational theories, with equational proofs inheriting the
   same modularity. However, higher-order operations (that take
   computations as arguments), break this modularity: while they can
@@ -165,7 +165,7 @@
   framework that captures an overloading-based semantics of
   higher-order effects by defining modular elaborations from
   higher-order effect trees into primitive algebraic effects.  We
-  demonstrate how our solution scales to define a wide range of known
+  demonstrate how this approach scales to define a wide range of known
   higher-order effects from the literature, and develop modular
   higher-order effect theories and modular reasoning principles that
   build on and extend the state of the art in modular algebraic effect
