Add eCensor to 3.4. Adjust typesetting some.

--- a/writeup/jfp/tex/document.tex
+++ b/writeup/jfp/tex/document.tex
@@ -71,6 +71,9 @@
 \newcommand{\aC}{\AgdaComment}
 \newcommand{\am}{\AgdaModule}
 
+% Define example environment
+\theoremstyle{definition}
+\newtheorem{example}{Example}
 
 %%
 %% Unicode for typesetting Agda code
