--- a/writeup/jfp/tex/document.tex
+++ b/writeup/jfp/tex/document.tex
@@ -143,11 +143,14 @@
 
 \begin{authgrp}
 \author{Cas van der Rest}
-\affiliation{Delft University of Technology\\
-  (\email{c.r.vanderrest@tudelft.nl})}
-\author{Casper Bach Poulsen}
-\affiliation{Delft University of Technology\\
-  (\email{c.b.poulsen@tudelft.nl})}
+\affiliation{Shielded Technologies\\
+  (\email{cas.vanderrest@shielded.io})}
+\author{Casper Bach}
+\affiliation{
+  University of Southern Denmark
+  and Delft University of Technology\\
+  (\email{casperbach@imada.sdu.dk})
+}
 \end{authgrp}
 
 \begin{abstract}
